Route modularity babyyyy
- changed the env names to flinky
- remove redundant url struct

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-FINKY_SECRET_API_TOKEN=
-FINKY_SERVER_CORS_ALLOWED_DOMAINS=
+FLINKY_SECRET_API_TOKEN=
+FLINKY_SERVER_CORS_ALLOWED_DOMAINS=
+FLINKY_SERVER_PORT=
