--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "only-allow": "^1.2.1"
+    "only-allow": "1.2.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@tailwindcss/oxide",
+      "esbuild"
+    ]
   }
 }
