--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-front/src/content/about.mdx  @kuroji-fusky
-front/src/content/faq.mdx    @kuroji-fusky
-family-tree-ref/             @kuroji-fusky
+client/src/content/about.mdx  @kuroji-fusky
+client/src/content/faq.mdx    @kuroji-fusky
+family-tree-ref/              @kuroji-fusky
