--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     container_name: Flinky Postgres
     image: postgres:latest
     restart: unless-stopped
+    depends_on:
+      - flinky_bucket
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "admin"]
       interval: 10s
@@ -33,8 +35,6 @@ services:
       POSTGRES_DB: flinky_db
     ports:
       - "5432:5432"
-      - "9000:9000"
-      - "9001:9001"
     volumes:
       - flinky_postgres_db:/var/lib/postgresql/data
 
@@ -50,6 +50,18 @@ services:
     ports:
       - "6379:6379"
       - "8001:8001"
+  
+  flinky_bucket:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9092:9090"
+    volumes:
+      - ~/minio/data:/data
+    environment:
+      - MINIO_ROOT_USER=FLINKY_BUCKET
+      - MINIO_ROOT_PASSWORD=PASSWORD
+    command: server /data --console-address ":9090"
 
 volumes:
   flinky_postgres_db:
