--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,10 @@
   },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space"
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "formatWithErrors": true,
+    "lineEnding": "lf"
   },
   "organizeImports": {
     "enabled": true
@@ -19,7 +22,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "style": {
+        "useTemplate": "error"
+      }
     }
   },
   "javascript": {
