--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "astro": "^5.10.1",
     "astro-icon": "^1.1.0",
     "astro-seo-schema": "^4.0.2",
+    "dotenv": "^17.2.0",
     "lodash-es": "^4.17.21",
     "nanostores": "^1.0.1",
     "svelte": "^5.34.9",
