--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "paths": {
+      "$lib/*": ["./src/lib/*"]
+    },
     "types": ["unplugin-icons/types/astro"]
   },
   "include": [".astro/types.d.ts", "**/*"],
