--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
 		"@iconify-json/fa-brands": "^1.1.8",
 		"@iconify-json/lucide": "^1.1.200",
 		"@tailwindcss/vite": "^4.1.11",
-		"astro": "^5.10.1",
+		"astro": ">=5.13.2",
 		"astro-icon": "^1.1.0",
 		"astro-seo-schema": "^4.0.2",
 		"dotenv": "^17.2.0",
