--- a/client/package.json
+++ b/client/package.json
@@ -10,30 +10,27 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "4.3.0",
-		"@astrojs/rss": "^4.0.11",
-		"@astrojs/sitemap": "^3.4.1",
-		"@astrojs/svelte": "^7.1.0",
-		"@fontsource/azeret-mono": "^5.2.9",
-		"@fontsource/inter": "^5.2.6",
-		"@iconify-json/fa-brands": "^1.1.8",
-		"@iconify-json/lucide": "^1.1.200",
-		"@tailwindcss/vite": "^4.1.11",
-		"astro": ">=5.13.2",
-		"astro-icon": "^1.1.0",
-		"astro-seo-schema": "^4.0.2",
+		"@astrojs/mdx": "4.3.12",
+		"@astrojs/rss": "^4.0.14",
+		"@astrojs/sitemap": "^3.6.0",
+		"@astrojs/svelte": "^7.2.2",
+		"@fontsource/azeret-mono": "^5.2.11",
+		"@fontsource/inter": "^5.2.8",
+		"@tailwindcss/vite": "^4.1.17",
+		"astro": "5.16.0",
+		"astro-icon": "^1.1.5",
+		"astro-seo-schema": "^5.1.0",
 		"dotenv": "^17.2.0",
 		"lodash-es": "^4.17.21",
-		"nanostores": "^1.0.1",
-		"svelte": "^5.34.9",
-		"tailwindcss": "^4.1.11",
-		"typescript": "^5.8.3",
-		"unplugin-icons": "^0.19.0"
+		"nanostores": "^1.1.0",
+		"svelte": "^5.43.13",
+		"tailwindcss": "^4.1.17",
+		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/lodash-es": "^4.17.12"
 	}
 }
